# mlx-ideogram4

./: LICENSE  README.md  app.py  bench.py  bench_attention.py  generate.py  hf_auth.py  index.html  load_text_encoder.py  load_weights.py  pipeline.py  pyproject.toml  scheduler.py  serve.sh  text_encoder.py  transformer.py  vae.py
docs/: public-demo.md
evidence/: first_coherent_latents.npy
evidence/clean_smokes/nlm2pr-macos26-m2pro16gb-clean-pull-20260614T021404Z/: 08_pip_freeze.txt  13_generation_command.txt  clean_smoke_product_nf4_receipt.json  clone_commit.txt  preflight.txt  receipt.md
evidence/comparison/: nf4_1024_uncontended_receipt.json
evidence/live_runs/: 20260613T153233_nf4-mlx-metal_512x512_seed42.json  20260613T165202_nf4-mlx-metal_512x512_seed42.json  20260614T031410Z_nf4-mlx-metal_512x512_seed2025_smoke.json
evidence/matrix/: nf4_chalk_receipt.json  nf4_landscape_receipt.json  nf4_neon2_receipt.json  nf4_neon_receipt.json  nf4_poster2_receipt.json  nf4_poster_receipt.json  nf4_product_receipt.json
mlx_ideogram4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reviews/: gradio-demo-launch-hardening_anaphora.md  gradio-demo-launch-hardening_probole.md  text-encoding-alignment_anaphora.md  text-encoding-alignment_probole.md  transformer-architecture-parity_anaphora.md  transformer-architecture-parity_probole.md
site/: demo-config.js  index.html
tests/: test_app_hardening.py  test_public_mode_contract.py  test_public_tunnel_contract.py
